# Leara

./: .gitignore  README.md  architecture.txt
leara/: .gitignore  Cargo.toml
leara-front/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
leara-front/src/: App.tsx  main.tsx
leara-front/src/components/: MemorySidebar.tsx  TaskModal.tsx
leara-front/src/styles/: App.scss  MemorySidebar.scss  TaskModal.scss  global.scss  variables.scss
leara-front/src/types/: electron.d.ts
leara-front/src/utils/: api.ts
leara/src/: main.rs
leara/src/api/: chat.rs  health.rs  memory.rs  mod.rs  system.rs
leara/src/db/: migrations.rs  mod.rs  queries.rs
leara/src/models/: chat.rs  memory.rs  mod.rs  system.rs
leara/src/system/: memory_service.rs  mod.rs
leara/src/utils/: mod.rs  ollama.rs
