[package]
name = "leara"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
diesel = { version = "2.1", features = ["sqlite"] }

# System access
sysinfo = "0.30"
tokio-fs = "0.1"
hostname = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment variables
dotenv = "0.15"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
