# Leara AI Assistant - Cargo Configuration
# 
# This file contains the Cargo configuration for the Leara AI Assistant backend.
# Defines dependencies, build settings, and project metadata.
# 
# Copyright (c) 2024 Leara AI Assistant Contributors
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# Author: KleaSCM
# Created: 2024-06-28
# Last Modified: 2024-06-28
# Version: 0.1.0
# 
# File: Cargo.toml
# Purpose: Rust project configuration and dependencies

[package]
name = "leara"
version = "0.1.0"
edition = "2021"
authors = ["KleaSCM <klea@example.com>"]
description = "Leara AI Assistant Backend"
license = "GPL-3.0"
repository = "https://github.com/kleascm/leara"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
diesel = { version = "2.1", features = ["sqlite"] }

# System access
sysinfo = "0.30"
tokio-fs = "0.1"
hostname = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment variables
dotenv = "0.15"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# HTTP requests
reqwest = { version = "0.11", features = ["json"] }

# Connection pooling
r2d2 = "0.8"
r2d2_sqlite = "0.22"

[dev-dependencies]
tokio-test = "0.4"
